--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,12 +22,15 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=shareit
       - SPRING_DATASOURCE_PASSWORD=shareit
+      - JAVA_TOOL_OPTIONS=-Duser.timezone=Europe/Moscow
 
   db:
     image: postgres:16.1
     container_name: postgres
     ports:
-      - "6541:5432"
+      - "5433:5432"
+    volumes:
+      - ./volumes/postgres:/var/lib/postgresql/data/
     environment:
       - POSTGRES_PASSWORD=shareit
       - POSTGRES_USER=shareit
