--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 							<version>1.6.0.Beta1</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
